Corrected view of archive page and event fb buttons on mobile

--- a/_scss/_archive.scss
+++ b/_scss/_archive.scss
@@ -1,6 +1,11 @@
+.archive-site {
+	margin: 3em auto 2em;
+}
+
 .archive {
 	.subtitle {
 		font-size: 22px;
 		margin-bottom: 2em;
 	}
 }
+
